<resources>

    <string name="app_name">Vacation Requests App</string>

    <!-- Activity titles -->
    <string name="title_activity_addrequest">Enter a leave request</string>
    <string name="title_activity_detailsrequest">Request details</string>
    <string name="title_activity_detailsrequestadmin">Request Details</string>
    <string name="title_activity_registeruser">Register a new user</string>
    <string name="title_activity_main">Overview</string>
    <string name="title_activity_adminrequests">Pending requests</string>
    <string name="title_activity_requests">My requests</string>
    <string name="title_activity_base">Base</string>
    <string name="title_activity_login">Login Screen</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Menu items -->
    <string name="menu_home">My calendar</string>
    <string name="menu_requests">My Requests</string>
    <string name="menu_addrequest">Add a request</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_managerequests">Manage pending requests</string>
    <string name="menu_register">Register a new user</string>

    <string name="action_settings">Settings</string>

    <!-- Leave types -->
    <string name="leaveType_vacation">Vacation</string>
    <string name="leaveType_specialLeave">Special leave</string>
    <string name="leaveType_overtimeCompensation">Overtime compensation</string>
    <string name="leaveType_withoutPay">Leave without pay</string>

    <!-- Forms labels -->
    <string name="prompt_type">Type of leave</string>
    <string name="prompt_from">From</string>
    <string name="prompt_to">To</string>
    <string name="prompt_remark">Remarks</string>
    <string name="prompt_status">Status</string>
    <string name="prompt_user">Employee</string>
    <string name="prompt_pickdate">Pick a date</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_lastname">Lastname</string>
    <string name="prompt_firstname">Firstname</string>
    <string name="prompt_isAdmin">Admin role</string>

    <!-- Descriptions -->
    <string name="description_accept">Accept</string>
    <string name="description_deny">Deny</string>
    <string name="description_logoapp">Vaction Request / HR Managment</string>

    <!-- Actions and buttons -->
    <string name="action_edit">EDIT</string>
    <string name="action_delete">DELETE</string>
    <string name="action_cancel">CANCEL</string>
    <string name="action_save">SAVE</string>
    <string name="action_login">Login</string>
    <string name="action_saveNewRequest">Send request</string>


    <!-- About and settings -->
    <string name="pref_header_about">About the app</string>
    <string name="pref_about_text">This application was developped by Samuel Wenger and Robin Gallay during the class 644-1 Mobile Development at the HES-So Valais Wallis. She can be used for a small company with few employees. </string>
    <string name="pref_colormode_title">Dark mode</string>
    <string name="pref_colormode_text">Enable or disable the dark mode to change the design of your app</string>
    <string name="pref_language_title">Language</string>
    <string name="pref_language_text">Choose the language of the application</string>
    <string name="pref_header_display">Display settings</string>

    <!-- Messages -->
    <string name="delete_msg">Do you really want to delete this request ?</string>
    <string name="request_edited_msg">Request has been edited.</string>
    <string name="request_submitted_msg">Request has been submitted.</string>
    <string name="user_created_msg">User created.</string>


    <!-- Errors -->
    <string name="error_invalid_username">Invalid username</string>
    <string name="error_unknown_username">Unknown user</string>
    <string name="error_invalid_password">Invalid password</string>
    <string name="error_incorrect_password">Incorrect password</string>
    <string name="error_addrequest_notype">Please select the type of request</string>
    <string name="error_addrequest_nostartdate">Please select a start date</string>
    <string name="error_addrequest_noenddate">Please select an end date</string>
    <string name="error_addrequest_enddatetoosmall">The end date must be higher than the start date.</string>
    <string name="error_request_notedited">An error has occured. Please retry.</string>

    <string name="error_register_no_lastname">Please fill in your lastname</string>
    <string name="error_register_no_firstname">Please fill in your firstname</string>
    <string name="error_register_no_username">Please choose an username</string>
    <string name="error_register_username_too_short">This username is too short (at least 6 characters)</string>
    <string name="error_register_invalid_username">Username must contain a dot (.)</string>
    <string name="error_register_no_password">Please choose a new password</string>
    <string name="error_register_password_too_short">This password is too short (at least 6 characters)</string>
    <string name="error_register_username_alreadyinuse">Username already in use</string>



    <!-- Navigation drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


</resources>